[project]
name = "db-discovery-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kyle Root", email = "kyle@wellconnected.co" }
]
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg[binary]>=3.2.7",
]

[project.scripts]
db-discovery-lib = "db_discovery_lib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
